[project]
name = "cyber-security"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "scikit-learn>=1.5.0",
    "imbalanced-learn>=0.12.0",
    "joblib>=1.4.0",
    "matplotlib>=3.9.0",
    "streamlit>=1.38.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "seaborn>=0.13.2",
    "groq>=1.2.0",
    "python-dotenv>=1.2.2",
    "jinja2>=3.1.0",
    "aiofiles>=24.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
]
